# LuaInMinecraftBukkitII

./: .gitignore  .gitmodules  CNAME  LICENSE  README.MD  README.md  build.gradle  settings.gradle
.github/workflows/: gradle.yml
docs/: Command.md  Configuration.md  EventListener.md  GlobalVariable.md  QuickStart.md  README.md  README.zh.md
docs/en/: CodeCompletion.md  Command.md  Configuration.md  EventListener.md  GlobalVariable.md  Luacage.md  QuickStart.md  README.md
docs/zh/: CodeCompletion.md  Command.md  Configuration.md  EventListener.md  GlobalVariable.md  Luacage.md  QuickStart.md  README.md
modules/jni-bridge/: CMakeLists.txt  README.md
modules/jni-bridge/src/: bridge.cpp  bridge.h  jni_bridge.cpp  jni_bridge.h  jni_bridge_inner.cpp
natives/: natives.json  natives.json.hash
natives/linux/amd64/cffi-lua-5.2.4/: cffi.so.hash
natives/linux/amd64/cffi-lua-5.3.6/: cffi.so.hash
natives/linux/amd64/cffi-lua-5.4.8/: cffi.so.hash
natives/linux/amd64/jni-bridge/: libjni-bridge.so.hash
natives/linux/amd64/lua-5.2.4/: liblua.so.hash  libluajava4Lua52.so.hash
natives/linux/amd64/lua-5.3.6/: liblua.so.hash  libluajava4Lua53.so.hash
natives/linux/amd64/lua-5.4.8/: liblua.so.hash  libluajava4Lua54.so.hash
natives/linux/amd64/luajit/: libluajava4Luajit.so.hash  libluajit.so.hash
natives/macos/arm64/cffi-lua-5.2.4/: cffi.so.hash
natives/macos/arm64/cffi-lua-5.3.6/: cffi.so.hash
natives/macos/arm64/cffi-lua-5.4.8/: cffi.so.hash
natives/macos/arm64/lua-5.2.4/: liblua.dylib  liblua.dylib.hash  libluajava4Lua52.dylib  libluajava4Lua52.dylib.hash
natives/macos/arm64/lua-5.3.6/: liblua.dylib  liblua.dylib.hash  libluajava4Lua53.dylib  libluajava4Lua53.dylib.hash
natives/macos/arm64/lua-5.4.8/: liblua.dylib  liblua.dylib.hash  libluajava4Lua54.dylib  libluajava4Lua54.dylib.hash
natives/macos/arm64/luajit/: libluajava4Luajit.dylib  libluajava4Luajit.dylib.hash  libluajit.so.hash
natives/windows/amd64/cffi-lua-5.2.4/: cffi.dll.hash
natives/windows/amd64/cffi-lua-5.3.6/: cffi.dll.hash
natives/windows/amd64/cffi-lua-5.4.8/: cffi.dll.hash
natives/windows/amd64/lua-5.2.4/: lua.dll.hash  luajava4Lua52.dll.hash
natives/windows/amd64/lua-5.3.6/: lua.dll.hash  luajava4Lua53.dll.hash
natives/windows/amd64/lua-5.4.8/: lua.dll.hash  luajava4Lua54.dll.hash
natives/windows/amd64/luajit/: lua51.dll.hash  luajava4Luajit.dll.hash
patchs/: luajava-gradle.patch  luajava-java8.patch
scheduler/: README.md  build.gradle
scheduler/scheduler-folia/: build.gradle
src/main/resources/: config.json  plugin.yml
(+121 files in other folders)
